--- a/wordpress-loadtestTest-Git.yaml
+++ b/wordpress-loadtestTest-Git.yaml
@@ -1,4 +1,4 @@
----test@example
+---test@example 100
 AWSTemplateFormatVersion: '2010-09-09'
 Description: 'AWS in Action: chapter 17 (Wordpress) https://httpd.apache.org/docs/2.4/programs/ab.html'
 Parameters:
